[gd_scene load_steps=11 format=3 uid="uid://bnr26aljp08ou"]

[ext_resource type="Texture2D" uid="uid://bs4qta4kg1m50" path="res://topdown_shooter/guns/rocket/rocket_side.png" id="1_4a4br"]
[ext_resource type="Script" uid="uid://in3l5mtfah3" path="res://guns/rocket.gd" id="1_at01x"]
[ext_resource type="PackedScene" uid="uid://lv2j5tyq0o0v" path="res://bullets/bullet-rocket.tscn" id="2_lv8si"]
[ext_resource type="AudioStream" uid="uid://2h72kvqthmqx" path="res://assets/SFX/rocket-firing.ogg" id="3_3e265"]
[ext_resource type="AudioStream" uid="uid://bqjwv077o5rad" path="res://assets/SFX/missile-launcher-reload-epic-stock-media-1-00-02.mp3" id="3_mj6qd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jr0rp"]
radius = 232.002

[sub_resource type="AtlasTexture" id="AtlasTexture_at01x"]
atlas = ExtResource("1_4a4br")
region = Rect2(0, 0, 19, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_mj6qd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at01x")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_528ue"]
bg_color = Color(0.0487392, 0.243848, 0.20365, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00784"]
bg_color = Color(0.117647, 0.737255, 0.45098, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="rocket" type="Area2D" groups=["guns"]]
z_index = 1
scale = Vector2(2.5, 2.5)
collision_mask = 2
script = ExtResource("1_at01x")
rocket_scene = ExtResource("2_lv8si")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -3)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_jr0rp")
debug_color = Color(0.409, 0.593, 0.369, 0.089)

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="WeaponPivot"]
position = Vector2(0, -3)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mj6qd")
animation = &"idle"

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/AnimatedSprite2D"]
unique_name_in_owner = true
position = Vector2(7.2, 1.1)
scale = Vector2(2, 2)

[node name="CooldownTimer" type="Timer" parent="WeaponPivot"]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="ReloadTimer" type="Timer" parent="WeaponPivot"]
unique_name_in_owner = true
one_shot = true

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_mj6qd")
volume_db = -3.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_3e265")

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -32.0
offset_top = 13.0
offset_right = 30.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_528ue")
theme_override_styles/fill = SubResource("StyleBoxFlat_00784")
value = 48.59
show_percentage = false

[connection signal="timeout" from="WeaponPivot/CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="WeaponPivot/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
